Minor fixes for improving visibility

--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -45,20 +45,26 @@
   color: $work-background-color;
 }
 
-.about__links {
+.about__spacer {
   flex: 1;
+}
 
-  @include respond('slim') {
-    margin: 10px 0 20px;
-  }
+.about__links {
+  display: flex;
 }
 
 .about__links__link {
-  margin-bottom: 5px;
+  padding: 10px 15px;
 
-  &:last-of-type {
-    margin-bottom: 0;
-  }
+  background-color: rgba($work-background-color, 0.7);
+  color: $home-background-color;
+}
+
+.about__links__link__icon {
+  display: inline-block;
+  font-size: 24px;
+  height: 24px;
+  width: 24px;
 }
 
 .about__link {
@@ -69,12 +75,6 @@
 
   @include respond('slim') {
     box-shadow: inset 0 -1px 0 $work-background-color;
-  }
-}
-
-.about__links__link .about__link {
-  @include respond('slim') {
-    font-size: 14px;
   }
 }
 
@@ -89,6 +89,10 @@
   @extend %base-footer-styles;
 
   font-size: 12px;
+
+  @include respond('slim') {
+    margin-top: 20px;
+  }
 }
 
 .about .nav-btn {
